@@ -5658,7 +5658,7 @@ TinyMUX 2.6 is based on TinyMUX 2.4. It is currently maintained by
 Stephen Dennis (AKA Brazil). There is a more complete list of credits
 in the README files for the server itself.
 
-See http://www.tinymux.com for an on-line version of these README files.
+See http://www.tinymux.org for an on-line version of these README files.
 
 & CTIME()
 CTIME()
@@ -13203,9 +13203,15 @@ VALID()
 
   Possible values for <category>:
 
-     name        Test for object name.
-     playername  Test for player name.
-     attrname    Test for attribute name.
+     attrname    Validates attribute name.
+     comalias    Validates comsys alias.
+     doing       Validates @doing string.
+     exitname    Validates exit name.
+     name        Validates object name.
+     password    Validates for password rules.
+     playername  Validates player name for @name and @alias.
+     malias      Validates @malias name.
+     maliasdesc  Validates @malias description.
 
   Valid() does not check the database for existence and it does not guarantee
   that an attempt to use such an object will succeed. It only looks at
