@@ -1,5 +1,5 @@
 & HELP
 NEWS
 
-  See http://www.tinymux.com
+  See http://www.tinymux.org
 
